--- a/WebCam_V3.html
+++ b/WebCam_V3.html
@@ -60,10 +60,6 @@
         <label>
             <input type="checkbox" id="muteRemoteCheckbox"> Mute Le Micro du Deuxième Utilisateur
         </label>
-        <label id="cameraLabel">
-            Sélectionner la caméra :
-            <select id="cameraSelect"></select>
-        </label>
         <button id="likeButton">❤️</button>
         <p id="likesCount">Likes reçus: 0</p>
     </div>
@@ -85,7 +81,6 @@
         const remoteVideo = document.getElementById('remoteVideo');
         const muteCheckbox = document.getElementById('muteCheckbox');
         const muteRemoteCheckbox = document.getElementById('muteRemoteCheckbox');
-        const cameraSelect = document.getElementById('cameraSelect');
         const likeButton = document.getElementById('likeButton');
         const likesCount = document.getElementById('likesCount');
 
@@ -149,7 +144,10 @@
         }
 
         async function getLocalStream() {
-            const constraints = await detectCameraConstraints();
+            const constraints = {
+                audio: true,
+                video: true
+            };
             return navigator.mediaDevices.getUserMedia(constraints)
                 .then(stream => {
                     localStream = stream;
@@ -161,49 +159,6 @@
                     console.error('Failed to get local stream', err);
                     throw err;
                 });
-        }
-
-        async function detectCameraConstraints() {
-            const device = detectDevice();
-            let constraints = {
-                audio: true,
-                video: { deviceId: cameraSelect.value ? { exact: cameraSelect.value } : undefined }
-            };
-
-            const devices = await navigator.mediaDevices.enumerateDevices();
-            const videoDevices = devices.filter(device => device.kind === 'videoinput');
-            cameraSelect.innerHTML = '';
-
-            if (videoDevices.length > 1) {
-                cameraSelect.innerHTML = `
-                    <option value="${videoDevices[0].deviceId}">Caméra 1</option>
-                    <option value="${videoDevices[1].deviceId}">Caméra 2</option>
-                `;
-            } else {
-                cameraSelect.innerHTML = `<option value="${videoDevices[0].deviceId}">Caméra 1</option>`;
-            }
-
-            // Restore the previously selected camera
-            const savedCameraId = localStorage.getItem('selectedCameraId');
-            if (savedCameraId) {
-                cameraSelect.value = savedCameraId;
-            }
-
-            return constraints;
-        }
-
-        function detectDevice() {
-            const userAgent = navigator.userAgent || navigator.vendor || window.opera;
-            if (/windows phone/i.test(userAgent)) {
-                return "Windows Phone";
-            }
-            if (/android/i.test(userAgent)) {
-                return "Android";
-            }
-            if (/iPad|iPhone|iPod/.test(userAgent) && !window.MSStream) {
-                return "iOS";
-            }
-            return "unknown";
         }
 
         function applyMicMute() {
@@ -246,7 +201,7 @@
                     });
 
                     // Save the ID of the peer we called
-                    lastCalledIdInput.value = peerId;
+                    peerIdInput.value = peerId;
                     saveLastCalledId(peerId);
                 })
                 .catch((err) => {
@@ -271,15 +226,6 @@
 
         muteRemoteCheckbox.addEventListener('change', () => {
             sendMuteSignal(muteRemoteCheckbox.checked);
-        });
-
-        cameraSelect.addEventListener('change', async () => {
-            localStorage.setItem('selectedCameraId', cameraSelect.value);
-            if (localStream) {
-                const videoTracks = localStream.getVideoTracks();
-                videoTracks.forEach(track => track.stop());
-            }
-            await getLocalStream();
         });
 
         function saveLastCalledId(id) {
